tests/cases/fail/duplicate_overload_signature.p4
def repeat(x: int) -> int:
    return x + x

def repeat(x: int) -> int:
    return x + x + x
